--- a/fish_counter.ipynb
+++ b/fish_counter.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMyHWnEIJXa2I7882X/0qnG",
+      "authorship_tag": "ABX9TyN/yC6PWFJTwabDjEu/Npd/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -260,7 +260,7 @@
     {
       "cell_type": "code",
       "source": [
-        "X = np.mean(roi_img)+ 0.99*np.std(roi_img)\n",
+        "X = np.mean(roi_img)+ Z*np.std(roi_img)\n",
         "(thresh, bw) = cv2.threshold(roi_img, X, 255, cv2.THRESH_BINARY)\n",
         "plt.imshow(bw)"
       ],
